--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
         />
     </head>
     <body>
-        <button
-            id="createButton"
-            name="createButton"
-        >
-            Create
-        </button>
+        <div class="header">
+            <button
+                id="createButton"
+                name="createButton"
+            >
+                Regenerate
+            </button>
+            <div id="score">
+                0/100
+            </div>
+        </div>
+        <div id="grid" class="grid">
+        </div>
     </body>
     <script
         type="text/javascript"
