--- a/index.html
+++ b/index.html
@@ -37,4 +37,5 @@
         type="text/javascript"
         src="bundle.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </html>
